# test-python-project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: build-test.yaml  codeql.yml  dependencies.yaml  openssf-scorecard.yaml  release-drafter.yaml  semantic-pull-request.yaml  sha-pinned-actions.yaml  tag-push.yaml
src/lfreleng_test_python_project/: __init__.py
tests/: conftest.py  test_cli.py
variations/: dynamic.toml  static-eol.toml
